<resources>
    <string name="app_name">PhinmaEd Information System</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tvQuote1">We started with just a single school serving 5,000 students in Cabanatuan City.
        Today, we are a fast-growing network of ten educational institutions serving over 144,000 students in the Philippines and Indonesia.</string>

    <string name="tvQuote1part2">In 2024, leading global investment firm KKR began investing in PHINMA Education from its Global Impact Fund II,
        which targets companies whose core business contributes meaningfully towards one or more of the United Nations Sustainable Development Goals (SDGs).</string>

    <string name="tvQuote1part3">PHINMA Education’s mission directly contributes toward SDG 4 (Quality Education). KKR, along with our existing shareholder Kaizenvest,
        are just two of our many partners in making lives better through education. </string>

    <string name="tvQuote2">Since 2004, PHINMA Education has provided quality education to underserved youth who are often the first in their
        families to go to college.</string>
    <string name="tvdesc1">144k+</string>
    <string name="tvdesc1part2">STUDENTS IN THE PHILIPPINES AND INDONESIA</string>

    <string name="tvdesc2">168</string>
    <string name="tvdesc2part2">BOARD EXAM TOPNOTCHERS IN THE PHILIPPINES</string>

    <string name="tvdesc3">110+</string>
    <string name="tvdesc3part2">PROGRAMS OFFERED ACCROSS THE NETWORK</string>

    <string name="tvdesc4">71%+</string>
    <string name="tvdesc4part2">GRADUATES EMPLOYED WITHIN A YEAR AFTER GRADUATION</string>

    <string name="tvdesc5">75%</string>
    <string name="tvdesc5part2">PASSING RATE FOR FIRST-TIME BOARD EXAM TAKERS</string>

    <string name="tvdesc6">33K+</string>
    <string name="tvdesc6part2">LICENCES PROFESSIONALS IN THE PHILIPPINES</string>

    <string name="tvPluzon">PHINMAED LUZON</string>
    <string name="tvPVisayas">PHINMAED VISAYAS</string>
    <string name="tvPMindanao">PHINMAED MINDANAO</string>
    <string name="tvPForeign">PHINMAED INTERNATIONAL</string>

    <string name="hintStudNum">Student Number</string>

    <string name="phinmahorizon">HORIZON UNIVERSITY</string>
    <string name="phinmaucl">UCL</string>
    <string name="phinmarcl">RCL</string>
    <string name="phinmarc">RC</string>
    <string name="phinmasjc">SJC</string>
    <string name="phinmaswu">SWU</string>
    <string name="phinmaui">UI</string>
    <string name="phinmaupang">UPANG</string>
    <string name="phinmaau">AU</string>
    <string name="phinmacoc">COC</string>
    <string name="etPass">Enter Password</string>
    <string name="btSign">SIGN IN</string>
    <string name="tvPass">Password</string>
    <string name="tvUser">Email</string>

    <string name="ModFlex1">• A combination of studying in school and studying at home.</string>
    <string name="ModFlex2">• 2 days face-to-face and 4 days remote learning.</string>
    <string name="ModFlex3">• Teacher support will be via text, call and social media during the remote coaching.</string>
    <string name="ModR1">• Largely home-based learning.</string>
    <string name="ModR2">• Suited for regular student who live far away and have difficulties traveling to come to school.</string>
    <string name="ModR3">• Learn online together with your classmates.</string>
    <string name="ModR4">• Teacher support will be via text, call and social media during the remote coaching.</string>
    <string name="scholarshipDesc">In our Scholarship program we provide our students 50% to 75% discount on tuition and miscellaneous fees.</string>
    <string name="scholarshipInstruc">Check our complete list of scholarships below:</string>
    <string name="tvtoLink">INTERESTED TO LEARN MORE?</string>


    <string name="c_coursedetails">Course details</string>
    <string name="c_intake">Intake</string>
    <string name="c_intake2">2023 – 2024</string>
    <string name="c_college">College</string>
    <string name="c_college2">College of Information Technology Education</string>
    <string name="c_course">Course</string>
    <string name="c_course2">Bachelor of Science in Computer Science</string>
    <string name="c_curriculum">Curriculum</string>
    <string name="c_curriculum2">CITE – Bachelor of Science in Computer Science - 23-24</string>
    <string name="c_semester">Semester</string>
    <string name="c_semester2">YS2S2</string>
    <string name="c_modality">Learning Modality</string>
    <string name="c_modality2">FLEX</string>
    <string name="c_advisor">Advisor Name</string>
    <string name="c_advisor2">Chocen Peronilla</string>
    <string name="c_mentor">Mentor Name</string>
    <string name="c_mentor2">-</string>
    <string name="c_education">Education details</string>
    <string name="c_sr">Sr No.</string>
    <string name="c_level">Level</string>
    <string name="c_school">Name of School</string>
    <string name="c_year">Year Attended</string>
    <string name="c_type">Type</string>
    <string name="c_sr2">1</string>
    <string name="c_level2">Elementary(Grade School)</string>
    <string name="c_school2">Name of School</string>
    <string name="c_year2">Year Attended</string>
    <string name="c_type2">Type</string>
    <string name="c_sr3">2</string>
    <string name="c_level3">Junior High School</string>
    <string name="c_school3">Name of School</string>
    <string name="c_year3">Year Attended</string>
    <string name="c_type3">Type</string>
    <string name="c_sr4">3</string>
    <string name="c_level4">Senior High School</string>
    <string name="c_school4">Name of School</string>
    <string name="c_year4">Year Attended</string>
    <string name="c_type4">Type</string>


    <string name="manual">STUDENT MANUAL</string>
    <string name="manual2">summarization</string>
    <string name="pdff">Complete student manual</string>
    <string name="missionvision">MISSION AND VISION</string>
    <string name="missionvision2">Mission of the PHINMA Education Network</string>
    <string name="missionvision3">Through the application of effective management in institutions of higher and basic learning, to give Filipinos better access to affordable, high quality education in key cities throughout the Philippines, preparing them to be globally competitive.</string>
    <string name="missionvision4">School Mission</string>
    <string name="missionvision5">To develop the filipino youth into empoyable global professional thru the endowment of knowledge and skills and the formation of character and spirit.</string>
    <string name="missionvision6">School Vision</string>
    <string name="missionvision7">With distinct advantage in English Communication and Information Technology, to be the leading institution of higher learning in the region in the development of globally competitive professionals.</string>
    <string name="policy">ACADEMIC POLICIES</string>
    <string name="policy2">A. Grading System</string>
    <string name="policy3">The grading system  will be provided to the students by their respective teacher through the syllabus. If understanding  of the system is not clear, it is the responsibility  of the student to seek clarification from his/her teacher, program head or dean.</string>
    <string name="policy4">Grades are given out in numerical format. A student who passed the subject will receive any of the following grades: 1.00, 1.25, 1.50, 1.75, 2.00. 2.25, 2.50, 2.75, 3.00. The grade of 1.00 is the highest possible grade that a student may get. A student who has failed a subject will receive a grade of 5.00.</string>
    <string name="policy5">B. Release of Grades</string>
    <string name="policy6">Final grades will be released by the Office of the Registrar. Other term exams will be released by the faculty.</string>
    <string name="policy7">C. Incomplete Grade</string>
    <string name="policy8">A student who gets anan incomplete grade has two consecutive terms to complete it. The Dean/Director must have approved the granting of the incomplete grade.</string>
    <string name="services">STUDENT SERVICES</string>
    <string name="services2">-Library \n-Computer and Internet Access \n-Cafeteria \n-Business Center \n-Guidance and Counseling \n-Health \n-Campus Ministry \n-Financial Aid \n-Personal Accident Insurance \n-Security \n-Recognized Student Organization</string>
    <string name="conduct">PEN STUDENT CODE OF CONDUCT</string>
    <string name="conduct2">PEN Student\'s Right</string>
    <string name="conduct3">Students of the PHINMA Education Network deserve quality education. We define quality education as education that: \n \n<b>1</b>. provides opportunities for learning globally in-demand skills \n \n<b>2</b>. helps PEN Students grow and develop into mature, responsible, effective and worthy citizens of their community.</string>
    <string name="conduct4">PEN Student Code of Conduct</string>
    <string name="conduct5">Together with the PEN Student\'s Right is the PEN Student\'s responsibilities to: \n\n<b>1</b>. live up to the standards of academic excellence and integrity. \n\n<b>2</b>. live and work according to the PEN Values.</string>
    <string name="structure">ORGANIZATIONAL STRUCTURE</string>
    <string name="register">New User? <b><u>Register now</u></b></string>
    <string name="login">Already have an account? <b><u>Login</u></b></string>
    <string name="title_activity_multimedia_compose">MultimediaCompose</string>
    <string name="about_description">PHINMA Education seeks to provide quality tertiary education to underserved Filipino youth. Our various learning strategies and interventions equip our students with professional and core work skills to attain gainful employment, whether or not they graduate. By knowing who our students are and where they come from, we are able to tailor our programs to what they want to achieve. We are guided by the following core values:</string>
    <string name="about_phinma_companies">The PHINMA Group seeks to provide the essentials for a dignified life for every Filipino family through our tradition of professional and effective management in various industries. We currently have investments in education, property development, hospitality, and construction materials.\n\n\n\n Our competitiveness and professionalism help give communities, both in and out of the Philippines, improved access to the essentials of a dignified life.\n\n\n\n The PHINMA group demonstrates that private businesses can serve both the needs of society and its shareholders.</string>


</resources>