<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpangModalityFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Modalitypage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="24dp"
                android:scaleType="fitStart"
                android:src="@drawable/phinmaheader2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="LEARNING MODALITIES"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp">

                    <TextView
                        android:id="@+id/Flex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:scaleType="fitStart"
                        android:text="FLEX LEARNING"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModFlex1"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="120dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModFlex2"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="170dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModFlex3"
                        android:textAlignment="textStart" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitEnd"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp">

                    <TextView
                        android:id="@+id/Flexremote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:scaleType="fitStart"
                        android:text="FlexRemote"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModR1"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModR2"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="160dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModR3"
                        android:textAlignment="textStart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="200dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/ModR4"
                        android:textAlignment="textStart" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.core.widget.NestedScrollView>